--- a/debian/control
+++ b/debian/control
@@ -17,7 +17,7 @@ Package: ls5000-dbg
 Section: graphics
 Architecture: any
 Depends: ls5000
-Description: Nikon Coolscan 5000 ED SANE backend
+Description: Nikon Coolscan 5000 ED SANE backend - debugging symbols
  This package contains a SANE backend for the Nikon Coolscan 5000 ED
  35mm film scanner.
  .
