--- a/debian/control
+++ b/debian/control
@@ -12,6 +12,9 @@ Depends: ${shlibs:Depends}
 Description: Nikon Coolscan 5000 ED SANE backend
  This package contains a SANE backend for the Nikon Coolscan 5000 ED
  35mm film scanner.
+ .
+ More information about this backend is available on its homepage
+ at http://johannes.sipsolutions.net/Projects/ls5000/.
 
 Package: ls5000-dbg
 Section: graphics
@@ -20,6 +23,9 @@ Depends: ls5000
 Description: Nikon Coolscan 5000 ED SANE backend - debugging symbols
  This package contains a SANE backend for the Nikon Coolscan 5000 ED
  35mm film scanner.
+ .
+ More information about this backend is available on its homepage
+ at http://johannes.sipsolutions.net/Projects/ls5000/.
  .
  This contains the debug symbols for the ls5000 SANE backend, useful
  to debug the cause if the backend crashes.
